--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,39 +1,47 @@
 name: Laws tracker
 
 on:
-    schedule:
-        - cron: '*/60 * * * *'
-    workflow_dispatch:
+  schedule:
+    - cron: "*/60 * * * *"
+  workflow_dispatch:
 
 jobs:
-    build:
-        permissions:
-            contents: write
-            packages: write
-            pull-requests: write
-            issues: write
-            statuses: write
-            deployments: write
-        runs-on: ubuntu-latest
+  build:
+    permissions:
+      contents: write
+      packages: write
+      pull-requests: write
+      issues: write
+      statuses: write
+      deployments: write
+    runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v4
-            - name: Use Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: '20.x'
-            - run: npm init -y
-            - name: Run script
-              run: |
-                  npm i rss-to-json telegraf && node ./barlaman-tracker/main.js
-              env:
-                  POSTER_TOKEN: ${{ secrets.POSTER_TOKEN }}
-            - name: set email
-              run: |
-                  git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-                  git config --local user.name "github-actions[bot]"
-            - name: commit
-              run: |
-                  git add --all >> /dev/null
-                  git commit -am "✅ Data updated" >> /dev/null  
-                  git push >> /dev/null
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+      - run: npm init -y
+      - name: Run script
+        run: |
+          npm i rss-to-json && node ./barlaman-tracker/main.js
+        env:
+          POSTER_TOKEN: ${{ secrets.POSTER_TOKEN }}
+      - name: set email
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+      - name: commit data
+        run: |
+          git add --all >> /dev/null
+          git reset ./data/temp_changes.json
+          git commit -am "✅ Data updated" >> /dev/null  
+          git push >> /dev/null
+      - name: add changes to changes.json & commit it
+        run: |
+          node ./barlaman-tracker/addChanges.js
+          git add --all >> /dev/null
+          rm -f ./data/temp_changes.json
+          git commit -am "Update changes.json" >> /dev/null  
+          git push >> /dev/null
